# RRHH_Onboarding

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
.deepeval/: .deepeval_telemetry.txt
data/: manual_empleado.txt  politicas_it.txt
notebooks/: indexacion_rag.ipynb
src/onboarding/: __init__.py  model_config.py
src/onboarding/agents/: __init__.py  hr_agent.py  it_agent.py
src/onboarding/mcp_server/: client.py  server.py
src/onboarding/retrieval/: rag_tool.py  search_tool.py
src/onboarding/supervisor/: agent.py
src/onboarding/supervisor/.adk/: session.db
tests/: test_evals.py  test_run.py
