[project]
name = "onboarding-agent"
version = "0.1.0"
description = "Trabajo Final: Sistema Multiagente de Onboarding con RAG y MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions,a2a]>=1.26.0",
    "llama-index-core>=0.10.0",
    "llama-index-vector-stores-faiss>=0.6.0",
    "faiss-cpu>=1.13.2",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.0.0",
    "deepeval>=3.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onboarding"]
